fixed about page spacing

--- a/portfolio.css
+++ b/portfolio.css
@@ -19,7 +19,7 @@ body{
     color: #93ccff;
     width: 50%;
     margin-bottom: 2%;
-    margin: -15% 0 0 27%;
+    margin: -20% 0 0 27%;
     font-size: 2vw;
     padding: 1% 0 1% 3%;
     border-left: 1px solid #93ccff;
